@@ -122,6 +122,7 @@
             <package>mariadb-client-10.0</package>
             <package>mariadb-common</package>
             <package>mariadb-server-10.0</package>
+            <package>mysql-common</package>
         </mariadb_10.0>
         <mariadb_10.1
                 repository="http://mirror.netcologne.de/mariadb/repo/10.1/debian jessie main"
@@ -137,6 +138,7 @@
             <package>mariadb-client-10.1</package>
             <package>mariadb-common</package>
             <package>mariadb-server-10.1</package>
+            <package>mysql-common</package>
         </mariadb_10.1>
         <percona_5.5
                 repository="http://repo.percona.com/apt jessie main"
